--- a/src/css-dev/abstracts/_mixins.scss
+++ b/src/css-dev/abstracts/_mixins.scss
@@ -6,9 +6,21 @@
 
 @mixin intro() {
    @include theme-text('1');
-   font-size: var(--fontSize-26);
+   font-size: var(--fontSize-20);
    font-weight: var(--fontWeight-light);
    line-height: var(--lineHeight-heading);
+
+   @include breakpoint( sm ) {
+      font-size: var(--fontSize-22);
+   }
+
+   @include breakpoint( md ) {
+      font-size: var(--fontSize-24);
+   }
+
+   @include breakpoint( lg ) {
+      font-size: var(--fontSize-26);
+   }
 }
 
 @mixin primary-gradient() {
