--- a/src/css-dev/atoms/_calloutBlock.scss
+++ b/src/css-dev/atoms/_calloutBlock.scss
@@ -1,6 +1,6 @@
 .calloutBlock {
    margin: 4rem 0;
-   padding: 3rem;
+   padding: 4rem 0;
    position: relative;
 
    // CUSTOM PROPS -----------------------------
@@ -64,9 +64,41 @@
 
    &.-cover {
       .calloutBlock__media {
-         margin-left: calc( 50% - 50vw + ( $navWidthDesktop / 2 ) );
-         margin-right: calc( 50% - 50vw + ( $navWidthDesktop / 2 ) );
-         width: calc( 100vw - $navWidthDesktop );
+         margin-left: calc( 50% - 50vw );
+         margin-right: calc( 50% - 50vw );
+         width: 100vw;
+
+         @include breakpoint( md ) {
+            margin-left: calc( 50% - 50vw + ( $navWidthDesktop / 2 ) );
+            margin-right: calc( 50% - 50vw + ( $navWidthDesktop / 2 ) );
+            width: calc( 100vw - $navWidthDesktop );
+         }
+      }
+   }
+
+   &.-contain {
+      .calloutBlock__media {
+         margin-left: -15px;
+         margin-right: -15px;
+         width: calc( 100% + 30px );
+
+         @include breakpoint( sm ) {
+            margin-left: -30px;
+            margin-right: -30px;
+            width: calc( 100% + 60px );
+         }
+
+         @include breakpoint( md ) {
+            margin-left: -45px;
+            margin-right: -45px;
+            width: calc( 100% + 90px );
+         }
+
+         @include breakpoint( lg ) {
+            margin-left: -60px;
+            margin-right: -60px;
+            width: calc( 100% + 120px );
+         }
       }
    }
 
