--- a/src/css-dev/abstracts/_mixins.scss
+++ b/src/css-dev/abstracts/_mixins.scss
@@ -18,7 +18,7 @@
       font-size: var(--fontSize-24);
    }
 
-   @include breakpoint( lg ) {
+   @include breakpoint( xl ) {
       font-size: var(--fontSize-26);
    }
 }
