--- a/src/css-dev/molecules/_index.scss
+++ b/src/css-dev/molecules/_index.scss
@@ -1,5 +1,6 @@
 @import './_backgroundGradient';
 @import './backgroundMedia';
+@import './homepageVideo';
 @import './sectionBackground';
 @import './sectionFooter';
 @import './sectionNav';
