--- a/src/css-dev/abstracts/_base.scss
+++ b/src/css-dev/abstracts/_base.scss
@@ -86,7 +86,7 @@
     --theme-color-2: #{ $c-dark };
     --theme-color-3: #{ $c-gray };
     --theme-color-4: #{ $c-fog };
-    --theme-color-accent: #{ $c-plum };
+    --theme-color-accent: #{ $c-rose };
     --theme-color-reverse: #FFFFFF;
   }
 
