--- a/src/css-dev/molecules/_index.scss
+++ b/src/css-dev/molecules/_index.scss
@@ -1,6 +1,7 @@
 @import './_backgroundGradient';
 @import './backgroundMedia';
 @import './homepageVideo';
+@import './listingTile';
 @import './sectionBackground';
 @import './sectionFooter';
 @import './sectionNav';
