--- a/src/css-dev/abstracts/_mixins.scss
+++ b/src/css-dev/abstracts/_mixins.scss
@@ -4,6 +4,23 @@
    }
 }
 
+@mixin eyebrow() {
+   @include pseudo-link( $z: -1 );
+   @include theme-text( 'reverse' );
+   display: inline-block;
+   font-size: var(--fontSize-16);
+   font-weight: var(--fontWeight-bold);
+   opacity: 0.6;
+   padding: 0.5rem var(--fontSize-18);
+   position: relative;
+   text-transform: uppercase;
+
+   &::after {
+      @include theme-text();
+      background: currentColor;
+   }
+}
+
 @mixin intro() {
    @include theme-text('1');
    font-size: var(--fontSize-20);
@@ -20,6 +37,49 @@
 
    @include breakpoint( xl ) {
       font-size: var(--fontSize-26);
+   }
+}
+
+@mixin link-style() {
+   @include theme-text('accent');
+   font-weight: 600;
+   position: relative;
+
+   &:hover,
+   &:focus {
+      &::after {
+         transform: scaleX( 1 );
+         transform-origin: right center;
+      }
+   }
+
+   &::after {
+      background: var(--theme-color-accent);
+      bottom: -1px;
+      content: '';
+      height: 2px;
+      left: 0;
+      position: absolute;
+      transform: scaleX( 0 );
+      transform-origin: left center;
+      transition: background var(--theme-transition-speed) $e-in-out, transform 300ms $e-in-out;
+      right: 0;
+      width: 100%;
+   }
+}
+
+@mixin doubleArrow-link-style() {
+   @include theme-text();
+   align-items: center;
+   display: flex;
+   font-size: var(--fontSize-16);
+   font-weight: var(--fontWeight-bold);
+   line-height: 1;
+
+   span {
+      @include theme-text('accent');
+      @include svg-contain( 15px, 15px );
+      margin: 0 0 0 0.5em;
    }
 }
 
@@ -79,8 +139,4 @@
    padding: 0;
    position: absolute;
    width: 1px;
-}
-
-.sr-only {
-   @include visuallyhidden();
 }
