--- a/src/css-dev/organisms/_pageSection.scss
+++ b/src/css-dev/organisms/_pageSection.scss
@@ -80,6 +80,7 @@
       align-items: center;
       display: flex;
       justify-content: center;
+      min-height: 100vh;
       padding-bottom: 0;
 
       + .pageSection.-standard {
