add text and image block

--- a/src/css-dev/atoms/_forms.scss
+++ b/src/css-dev/atoms/_forms.scss
@@ -109,5 +109,10 @@ input[type="radio"] {
 a.button,
 span.button {
    @include button();
+
+   &.-half {
+      @include button( $style: 'half' );
+   }
+
    @include theme-text( $transition: false );
 }
