--- a/src/css-dev/atoms/_forms.scss
+++ b/src/css-dev/atoms/_forms.scss
@@ -38,10 +38,10 @@ input[type="url"],
 input[type="week"],
 textarea {
    background-color: transparent;
-   border: 1px solid $c-white;
+   border: 1px solid var( --theme-color-0);
    border-radius: 0;
    box-sizing: border-box;
-   color: $c-white;
+   color: var( --theme-color-0);
    display: block;
    font-family: $ff-stack;
    font-size: 18px;
@@ -50,14 +50,14 @@ textarea {
    height: 48px;
    margin: 0;
    padding: 12px 24px;
-   transition: border 250ms ease-in-out;
+   transition: border var(--theme-transition-speed) $e-in-out, color var(--theme-transition-speed) $e-in-out;
    width: 100%;
 
    &:focus {
       background-color: transparent;
-      border: 1px solid $c-coral;
-      outline: none;
-      transition: border 250ms ease-in-out;
+      border-color: var( --theme-color-accent );
+      outline: 2px solid var( --theme-color-accent );
+      outline-offset: -3px;
    }
 }
 
@@ -69,28 +69,56 @@ input[type="submit"] {
 }
 
 ::-webkit-input-placeholder {
-   color: $c-coral;
+   color: var( --theme-color-accent );
+   transition: color var(--theme-transition-speed) $e-in-out;
 }
 
 ::ms-input-placeholder {
-   color: $c-coral;
+   color: var( --theme-color-accent );
+   transition: color var(--theme-transition-speed) $e-in-out;
 }
 
 ::-placeholder,
 ::placeholder {
-   color: $c-coral;
+   color: var( --theme-color-accent );
+   transition: color var(--theme-transition-speed) $e-in-out;
 }
 
 select {
-   border: 1px solid $c-white;
+   -moz-appearance: none;
+   -webkit-appearance: none;
+   appearance: none;
+   background-color: transparent;
+   background-image:
+      linear-gradient(45deg, transparent 50%, var(--theme-color-accent ) 50%),
+      linear-gradient(135deg, var(--theme-color-accent ) 50%, transparent 50%),
+      linear-gradient(to right, var(--theme-color-3 ), var(--theme-color-3 ));
+   background-position:
+      calc(100% - 20px) calc(1em + 2px),
+      calc(100% - 15px) calc(1em + 2px),
+      calc(100% - 2.5em) 0.5em;
+   background-size:
+      5px 5px,
+      5px 5px,
+      1px 1.7em;
+   background-repeat: no-repeat;
+   border: 1px solid var( --theme-color-0);
    border-radius: 0;
-   color: $c-coral;
+   color: var( --theme-color-0);
    height: 48px;
+   padding: 10px 15px;
+   position: relative;
+   transition: border var(--theme-transition-speed) $e-in-out, color var(--theme-transition-speed) $e-in-out;
    width: 100%;
 
+   &:hover {
+      cursor: pointer;
+   }
+
    &:focus {
-      background-color: transparent;
-      border-color: $c-coral;
+      border-color: var( --theme-color-accent );
+      outline: 2px solid var( --theme-color-accent );
+      outline-offset: -3px;
    }
 }
 
@@ -107,7 +135,10 @@ input[type="radio"] {
 }
 
 a.button,
-span.button {
+span.button,
+[type="button"]:not(.navBar__trigger, .navBar__title),
+[type="reset"],
+[type="submit"] {
    @include button();
 
    &.-half {
@@ -115,4 +146,158 @@ span.button {
    }
 
    @include theme-text( $transition: false );
+}
+
+.gform_wrapper {
+   ul {
+      @extend %remove-list-styles;
+   }
+
+   li {
+      margin-bottom: 0;
+   }
+
+   .-columns {
+      display: grid;
+      grid-template-columns: 1fr;
+
+      @include breakpoint( sm ) {
+         gap: 30px;
+         grid-template-columns: repeat( 2, 1fr );
+      }
+
+      @include breakpoint( lg ) {
+         grid-template-columns: repeat( 6, 1fr );
+      }
+   }
+
+   .-half {
+
+      @include breakpoint( sm ) {
+         grid-column: auto / span 1;
+      }
+
+      @include breakpoint( lg ) {
+         grid-column: auto / span 3;
+      }
+   }
+}
+
+.gform_body {
+   margin: var(--fontSize-45 ) 0;
+}
+
+.gform_fields {
+   display: grid;
+   row-gap: var(--fontSize-30);
+}
+
+.gfield_radio {
+   display: grid;
+   gap: 10px;
+
+   > li {
+      align-items: center;
+      display: grid;
+      gap: 5px;
+      grid-auto-flow: column;
+      grid-auto-columns: 12px max-content;
+      margin: 0;
+      position: relative;
+   }
+
+   input {
+      @include visuallyhidden();
+
+      &:checked + label {
+         &::before {
+            background: var( --theme-color-accent );
+            border-color: var( --theme-color-accent );
+         }
+      }
+
+      &:focus + label {
+         &::before {
+            outline: 2px solid var( --theme-color-accent );
+            outline-offset: 2px;
+         }
+      }
+   }
+
+   label {
+      padding: 0 0 0 10px;
+
+      &::before {
+         background: transparent;
+         border-radius: 50%;
+         border: 2px solid var( --theme-color-3 );
+         content: '';
+         height: 12px;
+         left: 0;
+         position: absolute;
+         top: calc(50% - 6px);
+         width: 12px;
+      }
+   }
+}
+
+.gfield_checkbox {
+   display: grid;
+   gap: 10px;
+
+   > li {
+      align-items: center;
+      display: grid;
+      gap: 5px;
+      grid-auto-flow: column;
+      grid-auto-columns: 12px auto;
+      margin: 0;
+      position: relative;
+   }
+
+   input {
+      @include visuallyhidden();
+
+      &:checked + label {
+         &::before {
+            background: var( --theme-color-accent );
+            border-color: var( --theme-color-accent );
+         }
+      }
+
+      &:focus + label {
+         &::before {
+            outline: 2px solid var( --theme-color-accent );
+            outline-offset: 2px;
+         }
+      }
+   }
+
+   label {
+      line-height: 1.1;
+      padding: 0 0 0 10px;
+
+      &::before {
+         background: transparent;
+         border: 2px solid var( --theme-color-3 );
+         content: '';
+         height: 12px;
+         left: 0;
+         position: absolute;
+         top: calc(50% - 6px);
+         width: 12px;
+      }
+   }
+}
+
+.gravityform__error_inform.validation_error {
+   background: var( --theme-color-accent );
+   color: var( --theme-color-reverse );
+   margin: 0 0 20px;
+   padding: 15px;
+
+   p:last-child {
+      margin: 0;
+
+   }
 }
