--- a/src/css-dev/organisms/_footer.scss
+++ b/src/css-dev/organisms/_footer.scss
@@ -209,7 +209,7 @@ footer.footer {
          margin: 0 0 1rem;
       }
 
-      &Form {
+      &Form form {
          align-items: center;
          display: grid;
          gap: 30px;
@@ -229,6 +229,14 @@ footer.footer {
 
       &Button {
          @include button( 'full' );
+      }
+
+      .gform_body {
+         margin: 0;
+      }
+
+      label {
+         @include visuallyhidden();
       }
    }
 
