--- a/src/css-dev/organisms/_navBar.scss
+++ b/src/css-dev/organisms/_navBar.scss
@@ -12,6 +12,7 @@
       grid-template-columns: 1fr;
       grid-template-rows: $navWidthDesktop 1fr min-content min-content min-content $navWidthDesktop;
       grid-template-areas: "Menu" "Logo" "Link1" "Link2" "Locations" "Social";
+      height: 100vh;
       height: var( --vh );
       min-width: $navWidthDesktop;
       width: auto;
