--- a/src/css-dev/abstracts/_base.scss
+++ b/src/css-dev/abstracts/_base.scss
@@ -1,6 +1,7 @@
 /* CSS Custom Properties Definitions */
 
 :root {
+  --vh: 100vh;
   --maxWidth-none: "none";
   --maxWidth-xs: 20rem; // 320
   --maxWidth-sm: 24rem; // 384
