--- a/src/css-dev/molecules/_transitionWarp.scss
+++ b/src/css-dev/molecules/_transitionWarp.scss
@@ -16,7 +16,7 @@
    pointer-events: none;
    position: fixed;
    top: 0;
-   transition: all 220ms cubic-bezier(0.47, 0, 0.745, 0.715) 0s;
+   //transition: all 220ms cubic-bezier(0.47, 0, 0.745, 0.715) 0s;
    width: 100vw;
    z-index: 1000;
 
