--- a/src/css-dev/molecules/_transitionWarp.scss
+++ b/src/css-dev/molecules/_transitionWarp.scss
@@ -1,13 +1,3 @@
-// .tl-cover-el {
-//    height: 100vh;
-//    left: 0;
-//    position: fixed;
-//    right: 0;
-//    top: 0;
-//    width: 100vw;
-//    z-index: 1000;
-// }
-
 .mjScreen {
    display: block;
    height: 100vh;
@@ -16,7 +6,7 @@
    pointer-events: none;
    position: fixed;
    top: 0;
-   //transition: all 220ms cubic-bezier(0.47, 0, 0.745, 0.715) 0s;
+   transform: rotate(180deg);
    width: 100vw;
    z-index: 1000;
 
